Adicionada a funcionalidade de deletar um registro

--- a/projeto/src/main/webapp/index.html
+++ b/projeto/src/main/webapp/index.html
@@ -14,7 +14,7 @@
     <li><a href='https://sistema-assinaturas.fmendest.repl.co/consulta'>Consulta de assinanturas</a></li>
     <li><a href='https://sistema-assinaturas.fmendest.repl.co/adicionar'>Adicionar assinatura</a></li>
     <li><a href='#'>Alterar assinatura</a></li>
-    <li><a href='#'>Excluir assinatura</a></li>
+    <li><a href='https://sistema-assinaturas.fmendest.repl.co/excluir'>Excluir assinatura</a></li>
   </ul>
 </body>
 </html>
