Implantação das funcionalidades CRUD finalizada

--- a/projeto/src/main/webapp/index.html
+++ b/projeto/src/main/webapp/index.html
@@ -11,9 +11,9 @@
   <h2>Opções</h2>
   <br>
   <ul>
-    <li><a href='https://sistema-assinaturas.fmendest.repl.co/consulta'>Consulta de assinanturas</a></li>
+    <li><a href='https://sistema-assinaturas.fmendest.repl.co/consulta'>Consulta de assinaturas</a></li>
     <li><a href='https://sistema-assinaturas.fmendest.repl.co/adicionar'>Adicionar assinatura</a></li>
-    <li><a href='#'>Alterar assinatura</a></li>
+    <li><a href='https://sistema-assinaturas.fmendest.repl.co/atualizar'>Alterar assinatura</a></li>
     <li><a href='https://sistema-assinaturas.fmendest.repl.co/excluir'>Excluir assinatura</a></li>
   </ul>
 </body>
