Adiciona estilos css na página principal e na página de adicionar assinaturas.

--- a/projeto/src/main/webapp/index.html
+++ b/projeto/src/main/webapp/index.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <title>Sistema de Controle de Assinantes</title>
+  <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 <body>
-  <h1>Sistema de Controle de Assinantes</h1>
-  <hr>
-  <h2>Opções</h2>
-  <br>
-  <ul>
-    <li><a href='https://sistema-assinaturas.fmendest.repl.co/consulta'>Consulta de assinaturas</a></li>
-    <li><a href='https://sistema-assinaturas.fmendest.repl.co/adicionar'>Adicionar assinatura</a></li>
-    <li><a href='https://sistema-assinaturas.fmendest.repl.co/atualizar'>Alterar assinatura</a></li>
-    <li><a href='https://sistema-assinaturas.fmendest.repl.co/excluir'>Excluir assinatura</a></li>
-  </ul>
+  <header>
+    <h1 class="title">Sistema de Controle de Assinantes</h1>
+  </header>
+  <hr/>
+  <main>
+    <ul class="list">
+      <li><a href='https://sistema-assinaturas.fmendest.repl.co/consulta'>Consulta de assinaturas</a></li>
+      <li><a href='https://sistema-assinaturas.fmendest.repl.co/adicionar'>Adicionar assinatura</a></li>
+      <li><a href='https://sistema-assinaturas.fmendest.repl.co/atualizar'>Alterar assinatura</a></li>
+      <li><a href='https://sistema-assinaturas.fmendest.repl.co/excluir'>Excluir assinatura</a></li>
+    </ul>
+  </main>
 </body>
 </html>
