--- a/projeto/src/main/webapp/index.html
+++ b/projeto/src/main/webapp/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1 class="title">Sistema de Controle de Assinantes</h1>
   </header>
-  <hr/>
   <main>
+    <h2 class="subtitle">Menu principal</h2>
     <ul class="list">
       <li><a href='https://sistema-assinaturas.fmendest.repl.co/consulta'>Consulta de assinaturas</a></li>
       <li><a href='https://sistema-assinaturas.fmendest.repl.co/adicionar'>Adicionar assinatura</a></li>
